fix: align display of quote section

--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ body{
 
 .random p {
     font-size: 12px;
+    text-align: center;
 }
 
 .random ul {
@@ -122,17 +123,19 @@ body{
     padding: 20px;
 }
 
-.random p {
-    text-align: center;
-}
-
 .quote {
     background-color: #E5E7EB;
+    display: flex;
+   /*  flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .quote p {
     color: #1f2937;
-    font-size: 36px;
+    font-size: 35px;
     font-weight: 100;
     font-style: italic;
 }
@@ -140,7 +143,8 @@ body{
 .quote h3 {
     color: #1f2937;
     font-style: normal;
-    font-size: 30px;
+    font-size: 20px;
+    text-align: right;
 }
 
 .call-container-out button {
